feat(atlas): Resize virtual machines across hosts
